accessible/base/FocusManager.cpp
@@ -240,6 +240,19 @@ void FocusManager::ProcessDOMFocus(nsINode* aTarget) {
   Accessible* target =
       document->GetAccessibleEvenIfNotInMapOrContainer(aTarget);
   if (target) {
+    if (target->IsOuterDoc()) {
+      // An OuterDoc shouldn't get accessibility focus itself. Focus should
+      // always go to something inside it. However, OOP iframes will get DOM
+      // focus because their content isn't in this process. We suppress the
+      // focus in this case. The OOP browser will fire focus for the correct
+      // Accessible inside the embedded document. If we don't suppress the
+      // OuterDoc focus, the two focus events will race and the OuterDoc focus
+      // may override the correct embedded focus for accessibility clients. Even
+      // if they fired in the correct order, clients may report extraneous focus
+      // information to the user before reporting the correct focus.
+      return;
+    }
+
     // Check if still focused. Otherwise we can end up with storing the active
     // item for control that isn't focused anymore.
     nsINode* focusedNode = FocusedDOMNode();
